--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,13 @@
-@import 'vendors/reset';
+@import "vendors/reset";
 
-@import 'global/layout';
+@import "global/layout";
+
+@import "home.scss";
+
+@import "game.scss";
+
+@import "game1.scss";
+
+@import "game2.scss";
+
+@import "game3.scss";
