--- a/src/scss/game2.scss
+++ b/src/scss/game2.scss
@@ -1,6 +1,6 @@
 .game2 {
   body {
-    background-image: url(../images/Daisy4.png);
+    background-image: url("../images/Daisy4.png");
   }
 
   .disapearText {
