video: ok, images: ok, pages:ok

--- a/src/scss/global/blocs/game.scss
+++ b/src/scss/global/blocs/game.scss
@@ -1,9 +1,9 @@
-.game1 {
+.game {
   body {
-    background-image: url(../images/daisy.png);
+    background-image: url(images/daisy.png);
   }
 
-  .daisyText2 {
+  .daisyText {
     display: flex;
     justify-content: center;
     align-items: center;
