--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,13 +1,8 @@
+@import "global/blocs/home.scss";
+@import "global/blocs/game1.scss";
+
 @import "vendors/reset";
 
 @import "global/layout";
 
-@import "home.scss";
-
-@import "game.scss";
-
-@import "game1.scss";
-
-@import "game2.scss";
-
-@import "game3.scss";
+// @import "gameover";
