--- a/src/scss/global/blocs/home.scss
+++ b/src/scss/global/blocs/home.scss
@@ -7,7 +7,7 @@
 }
 
 .main {
-  background: url(../images/crying-peach.png);
+  background: url(/images/crying-peach.png);
   width: 1366px;
   height: 750px;
   background-position: inherit;
@@ -32,7 +32,7 @@
 }
 
 .titleOfTheGame {
-  background: url(../images/rectangle.png);
+  background: url(/images/rectangle.png);
   width: 342px;
   height: 140px;
   position: relative;
