--- a/src/scss/global/layout.scss
+++ b/src/scss/global/layout.scss
@@ -1,5 +1,9 @@
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 1366px;
+  height: 750px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
