video: ok, images: ok, pages:ok retry avec modif sur script, game1, game2

--- a/src/scss/global/blocs/game2.scss
+++ b/src/scss/global/blocs/game2.scss
@@ -1,26 +1,24 @@
-.game2 {
-  body {
-    background-image: url(../images/Daisy4.png);
-  }
+.background2 {
+  background-image: url(/images/Daisy4.png);
+}
 
-  .disapearText {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: black;
-    font-size: 40px;
-    font-weight: bold;
-    position: absolute;
-    margin-top: 500px;
-    height: 100px;
-    width: 100%;
-  }
+.disapearText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: black;
+  font-size: 40px;
+  font-weight: bold;
+  position: absolute;
+  margin-top: 500px;
+  height: 100px;
+  width: 100%;
+}
 
-  .daisyhere {
-    display: block;
-    justify-content: center;
-    margin-top: 150px;
-    margin-left: 100px;
-  }
+.daisyhere {
+  display: block;
+  justify-content: center;
+  margin-top: 150px;
+  margin-left: 100px;
 }
