--- a/src/scss/global/blocs/gameover.scss
+++ b/src/scss/global/blocs/gameover.scss
@@ -4,7 +4,7 @@
     url("/fonts/wonder.TTF") format("truetype");
 }
 
-body {
+.backgroundGO {
   background-color: black;
   max-height: 750px;
   max-width: 1366;
