--- a/src/scss/global/blocs/home.scss
+++ b/src/scss/global/blocs/home.scss
@@ -8,8 +8,8 @@
 
 .main {
   background: url(/images/crying-peach.png);
-  width: 1366px;
-  height: 750px;
+  // width: 1366px;
+  // height: 750px;
   background-position: inherit;
   background-repeat: no-repeat;
   background-size: cover;
