--- a/src/scss/global/blocs/game.scss
+++ b/src/scss/global/blocs/game.scss
@@ -1,20 +1,18 @@
-.game {
-  body {
-    background-image: url(images/daisy.png);
-  }
+.background {
+  background-image: url(/images/crying-peach.png);
+}
 
-  .daisyText {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: white;
-    background-color: #453737;
-    opacity: 0.75;
-    position: absolute;
-    font-size: 30px;
-    bottom: 0;
-    height: 100px;
-    width: 100%;
-  }
+.daisyText {
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // text-align: center;
+  color: white;
+  background-color: #453737;
+  opacity: 0.75;
+  position: absolute;
+  font-size: 30px;
+  // bottom: 0;
+  // height: 100px;
+  // width: 100%;
 }
