--- a/src/scss/global/blocs/game1.scss
+++ b/src/scss/global/blocs/game1.scss
@@ -5,13 +5,13 @@
 .daisyText2 {
   display: flex;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  // align-items: center;
+  // text-align: center;
   color: white;
-  // background-color: #453737;
+  background-color: #453737;
   opacity: 0.75;
   // position: absolute;
   font-size: 30px;
-  bottom: 0;
-  width: 100%;
+  // bottom: 0;
+  // width: 100%;
 }
