--- a/src/scss/global/blocs/tuto.scss
+++ b/src/scss/global/blocs/tuto.scss
@@ -4,7 +4,7 @@
     url("/fonts/SuperMario256.ttf") format("truetype");
 }
 
-body {
+.backgroundTuto {
   background-color: rgba(167, 167, 167, 0.616);
   // background-image: url("/image-backgroung/tuto-images.png");
 }
