--- a/src/scss/global/layout.scss
+++ b/src/scss/global/layout.scss
@@ -4,6 +4,5 @@ body {
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  // text-align: center;
 }
