--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,13 @@
-@import "global/blocs/home.scss";
+@import "global/blocs/game.scss";
 @import "global/blocs/game1.scss";
+@import "global/blocs/game2.scss";
+@import "global/blocs/game3.scss";
+@import "global/blocs/gameover.scss";
+@import "global/blocs/header.scss";
+@import "global/blocs/home.scss";
+@import "global/blocs/tuto.scss";
+@import "global/blocs/tutocommande.scss";
 
 @import "vendors/reset";
 
 @import "global/layout";
-
-// @import "gameover";
