--- a/src/scss/global/blocs/game2.scss
+++ b/src/scss/global/blocs/game2.scss
@@ -1,24 +1,17 @@
-.background2 {
-  background-image: url(/images/Daisy4.png);
+.background1 {
+  background-image: url(/images/bedroom.png);
 }
 
-.disapearText {
+.daisyText2 {
   display: flex;
   justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: black;
-  font-size: 40px;
-  font-weight: bold;
-  position: absolute;
-  margin-top: 500px;
-  height: 100px;
-  width: 100%;
-}
-
-.daisyhere {
-  display: block;
-  justify-content: center;
-  margin-top: 150px;
-  margin-left: 100px;
+  // align-items: center;
+  // text-align: center;
+  color: white;
+  background-color: #453737;
+  opacity: 0.75;
+  // position: absolute;
+  font-size: 30px;
+  // bottom: 0;
+  // width: 100%;
 }
