--- a/src/scss/global/layout.scss
+++ b/src/scss/global/layout.scss
@@ -2,7 +2,7 @@ body {
   width: 1366px;
   height: 750px;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
   // text-align: center;
 }
