--- a/src/scss/global/blocs/tutocommande.scss
+++ b/src/scss/global/blocs/tutocommande.scss
@@ -4,44 +4,49 @@
     url("/fonts/SuperMario256.ttf") format("truetype");
 }
 
-.backgroundTutoC {
-  background-color: rgba(167, 167, 167, 0.616);
-  // background-image: url("/image-backgroung/tuto-images.png");
-}
-
 .imgTuto {
-  height: 250px;
+  margin-top: 40px;
 }
 
 .tutoImg {
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-direction: column;
-  margin-top: 2%;
+  margin: none;
+  padding: none;
 }
+
 .text {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   flex-direction: column;
   align-items: center;
   text-align: center;
   color: white;
+  .but {
+    font-family: "SuperMario256";
+    font-size: 45px;
+    // margin-top: -50px;
+  }
 }
 
-.but {
+// .but {
+//   font-family: "SuperMario256";
+//   font-size: 45px;
+//   margin-top: -50px;
+// }
+
+.explication {
   font-family: "SuperMario256";
-  font-size: 60px;
-}
-
-.textButText {
   font-size: 30px;
+  width: 60%;
 }
 
-.content {
+.contentTuto {
   display: flex;
+  height: 750px;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-top: 8%;
+  background-color: rgba(167, 167, 167, 0.616);
+  color: white;
 }
