--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,7 +5,7 @@
 @import "global/blocs/gameover.scss";
 @import "global/blocs/header.scss";
 @import "global/blocs/home.scss";
-@import "global/blocs/tuto.scss";
+// @import "global/blocs/tuto.scss";
 @import "global/blocs/tutocommande.scss";
 
 @import "vendors/reset";
