start menu changed, QUITTER removed

--- a/src/scss/global/blocs/tutocommande.scss
+++ b/src/scss/global/blocs/tutocommande.scss
@@ -1,8 +1,8 @@
-@font-face {
-  font-family: "SuperMario256";
-  src: url("/fonts/SuperMario256.ttf") format("ttf"),
-    url("/fonts/SuperMario256.ttf") format("truetype");
-}
+// @font-face {
+//   font-family: "SuperMario256";
+//   src: url("/fonts/SuperMario256.ttf") format("ttf"),
+//     url("/fonts/SuperMario256.ttf") format("truetype");
+// }
 
 .imgTuto {
   margin-top: 40px;
