--- a/src/scss/global/layout.scss
+++ b/src/scss/global/layout.scss
@@ -7,3 +7,17 @@ body {
   // justify-content: center;
   // text-align: center;
 }
+
+@font-face {
+  font-family: "SuperMario256";
+  src: url("/fonts/SuperMario256.ttf") format("ttf"),
+    url("/fonts/SuperMario256.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "8BIT WONDER Nominal";
+  font-style: normal;
+  font-weight: normal;
+  src: local("8BIT WONDER Nominal"),
+    url("../fonts/8-BIT\ WONDER\ \(2\).woff") format("woff");
+}
