--- a/src/scss/global/blocs/home.scss
+++ b/src/scss/global/blocs/home.scss
@@ -1,21 +1,18 @@
-@font-face {
-  font-family: "8BIT WONDER Nominal";
-  font-style: normal;
-  font-weight: normal;
-  src: local("8BIT WONDER Nominal"),
-    url("../fonts/8-BIT\ WONDER\ \(2\).woff") format("woff");
-}
+// @font-face {
+//   font-family: "8BIT WONDER Nominal";
+//   font-style: normal;
+//   font-weight: normal;
+//   src: local("8BIT WONDER Nominal"),
+//     url("../fonts/8-BIT\ WONDER\ \(2\).woff") format("woff");
+// }
 
 .main {
   background: url(/images/crying-peach.png);
-  // width: 1366px;
-  // height: 750px;
-  // background-position: inherit;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.backgroundH {
+.backgroundOpacity {
   width: 1366px;
   height: 750px;
   background: #0d050538;
@@ -33,47 +30,41 @@
 
 .titleOfTheGame {
   background: url(/images/rectangle.png);
-  width: 342px;
+  width: 400px;
   height: 140px;
   position: relative;
 }
-
-.elipse1 {
+.elipses {
   position: absolute;
-  top: 0;
-  left: 0;
 }
 
-.elipse2 {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.elipse3 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
+.elipse3,
 .elipse4 {
-  position: absolute;
   bottom: 0;
+}
+.elipse1,
+.elipse3 {
+  left: 0;
+}
+
+.elipse2,
+.elipse4 {
   right: 0;
 }
+
 .pictureOfMario {
-  width: 340px;
+  width: 400px;
   position: absolute;
   margin-top: 50px;
 }
 
 .menu {
-  width: 600px;
+  // width: 600px;
   height: 320px;
   display: flex;
   align-items: center;
-  justify-content: initial;
-  flex-direction: column;
+  // justify-content: initial;
+  // flex-direction: column;
   padding-top: 60px;
 
   ul {
@@ -84,36 +75,25 @@
 
   li {
     display: flex;
-    width: 100%;
-    height: 70px;
-    text-align: center;
-    font-size: 30px;
+    // text-align: center;
+    font-size: 38px;
+    margin: 20px;
     cursor: pointer;
     color: white;
-    flex-direction: initial;
+    // flex-direction: initial;
     justify-content: center;
+    font-family: "8BIT WONDER Nominal";
   }
 }
 
-.star1 {
-  width: 30px;
-  height: 30px;
-  order: 1;
-  display: none;
-}
-
+.star1,
 .star2 {
-  width: 30px;
-  height: 30px;
+  display: flex;
+  width: 35px;
+  height: 35px;
   order: 1;
   display: none;
-}
-
-.star3 {
-  width: 30px;
-  height: 30px;
-  order: 1;
-  display: none;
+  margin-right: 15px;
 }
 
 .play {
@@ -133,24 +113,3 @@
     }
   }
 }
-
-.exit {
-  order: 2;
-  &:hover {
-    + .star3 {
-      display: flex;
-    }
-  }
-}
-
-// .play:hover + .star1 {
-//   display: flex;
-// }
-
-// .orders:hover + .star2 {
-//   display: flex;
-// }
-
-// .exit:hover + .star3 {
-//   display: flex;
-// }
