--- a/src/scss/global/blocs/home.scss
+++ b/src/scss/global/blocs/home.scss
@@ -1,21 +1,10 @@
-@font-face {
-  font-family: "8BIT WONDER Nominal";
-  font-style: normal;
-  font-weight: normal;
-  src: local("8BIT WONDER Nominal"),
-    url("../fonts/8-BIT\ WONDER\ \(2\).woff") format("woff");
-}
-
 .main {
   background: url(/images/crying-peach.png);
-  // width: 1366px;
-  // height: 750px;
-  // background-position: inherit;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.backgroundH {
+.backgroundOpacity {
   width: 1366px;
   height: 750px;
   background: #0d050538;
@@ -33,38 +22,38 @@
 
 .titleOfTheGame {
   background: url(/images/rectangle.png);
-  width: 342px;
-  height: 140px;
+  width: 442px;
+  height: 240px;
   position: relative;
 }
-
-.elipse1 {
+.elipses {
   position: absolute;
+}
+.elipse1 {
   top: 0;
   left: 0;
 }
 
 .elipse2 {
-  position: absolute;
   top: 0;
   right: 0;
 }
 
 .elipse3 {
-  position: absolute;
   bottom: 0;
   left: 0;
 }
 
 .elipse4 {
-  position: absolute;
   bottom: 0;
   right: 0;
 }
+
 .pictureOfMario {
-  width: 340px;
+  width: 440px;
   position: absolute;
-  margin-top: 50px;
+  margin-top: 65px;
+  height: 65px;
 }
 
 .menu {
@@ -84,36 +73,23 @@
 
   li {
     display: flex;
-    width: 100%;
-    height: 70px;
+    font-family: "8BIT WONDER Nominal";
+    margin: 25px;
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
     cursor: pointer;
     color: white;
-    flex-direction: initial;
     justify-content: center;
   }
 }
 
-.star1 {
-  width: 30px;
-  height: 30px;
-  order: 1;
-  display: none;
-}
-
+.star1,
 .star2 {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   order: 1;
   display: none;
-}
-
-.star3 {
-  width: 30px;
-  height: 30px;
-  order: 1;
-  display: none;
+  margin-right: 20px;
 }
 
 .play {
@@ -133,24 +109,3 @@
     }
   }
 }
-
-.exit {
-  order: 2;
-  &:hover {
-    + .star3 {
-      display: flex;
-    }
-  }
-}
-
-// .play:hover + .star1 {
-//   display: flex;
-// }
-
-// .orders:hover + .star2 {
-//   display: flex;
-// }
-
-// .exit:hover + .star3 {
-//   display: flex;
-// }
