--- a/src/scss/global/blocs/game1.scss
+++ b/src/scss/global/blocs/game1.scss
@@ -1,5 +1,9 @@
 .background2 {
   background-image: url(/images/bedroom.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 1366px;
+  height: 750px;
 }
 
 .disapearText {
