--- a/src/scss/global/blocs/game.scss
+++ b/src/scss/global/blocs/game.scss
@@ -1,18 +1,76 @@
-.background {
-  background-image: url(/images/crying-peach.png);
+.pieces {
+  height: 100px;
+  width: 100px;
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  position: absolute;
+  justify-content: space-around;
+  z-index: 1;
+  top: -60px;
+  flex-direction: row;
 }
 
-.daisyText {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  // text-align: center;
-  color: white;
-  background-color: #453737;
-  opacity: 0.75;
+.mush {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   position: absolute;
-  font-size: 30px;
-  // bottom: 0;
-  // height: 100px;
-  // width: 100%;
+  right: 0;
+  top: -10px;
+}
+
+.text.scoreNumber {
+  font-size: 40px;
+  font-weight: 800;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+
+  right: 0;
+  top: 20px;
+}
+
+.flexItem.rooms {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  position: fixed;
+  z-index: 1000000;
+  width: 100%;
+  top: 0;
+}
+
+.piece1 {
+  background: #ee8dd9;
+}
+.piece2 {
+  background: #a4edf1;
+}
+.piece3 {
+  background: #ff7272;
+}
+.piece4 {
+  background: #aacfae;
+}
+
+.maison {
+  position: relative;
+}
+
+.element {
+  height: 100px;
+  width: 100px;
+}
+
+.list {
+  display: flex;
+}
+
+.score {
+  position: relative;
+  z-index: 1000;
 }
