--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,7 @@
-@import "global/blocs/game.scss";
-@import "global/blocs/game1.scss";
-@import "global/blocs/game2.scss";
-@import "global/blocs/game3.scss";
+@import "global/blocs/scenario1.scss";
+@import "global/blocs/scenario2.scss";
+@import "global/blocs/scenario3.scss";
+@import "global/blocs/scenario4.scss";
 @import "global/blocs/gameover.scss";
 @import "global/blocs/header.scss";
 @import "global/blocs/home.scss";
@@ -12,4 +12,4 @@
 
 @import "global/layout";
 
-@import "global/blocs/home1.scss";
+@import "global/blocs/game.scss";
