--- a/src/scss/global/blocs/home.scss
+++ b/src/scss/global/blocs/home.scss
@@ -21,6 +21,7 @@
 }
 
 .titleOfTheGame {
+  position: relative;
   background: url(/images/rectangle.png);
   width: 442px;
   height: 240px;
@@ -36,18 +37,16 @@
 .elipse2 {
   top: 0;
   right: 0;
-
 }
-.elipse1,
+
 .elipse3 {
   bottom: 0;
   left: 0;
 }
 
-.elipse2,
 .elipse4 {
   bottom: 0;
-
+  right: 0;
 }
 
 .pictureOfMario {
