--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,12 +1,11 @@
 @import "global/blocs/scenario1.scss";
 @import "global/blocs/scenario2.scss";
 @import "global/blocs/scenario3.scss";
-@import "global/blocs/scenario4.scss";
 @import "global/blocs/gameover.scss";
 @import "global/blocs/header.scss";
 @import "global/blocs/home.scss";
-// @import "global/blocs/tuto.scss";
 @import "global/blocs/tutocommande.scss";
+@import "global/blocs/video.scss";
 
 @import "vendors/reset";
 
