--- a/src/scss/global/blocs/game.scss
+++ b/src/scss/global/blocs/game.scss
@@ -6,10 +6,8 @@
   flex-direction: row;
   align-items: center;
   align-content: center;
-  position: absolute;
   justify-content: space-around;
   z-index: 1;
-  top: -60px;
   flex-direction: row;
 }
 
@@ -49,7 +47,9 @@
   display: flex;
 }
 
-.score {
-  position: relative;
-  z-index: 1000;
+span {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
