update and debug scss

--- a/src/scss/global/blocs/scenario1.scss
+++ b/src/scss/global/blocs/scenario1.scss
@@ -3,27 +3,39 @@
   background-size: cover;
 }
 
+.scenario1__text-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  bottom: 0;
+  width: 100%;
+  background-color: #453737;
+  opacity: 0.75;
+  font-family: "SuperMario256";
+}
+
 .daisyText {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: white;
-  background-color: #453737;
-  opacity: 0.75;
-  position: absolute;
   font-size: 30px;
-  bottom: 0;
-  height: 100px;
-  width: 100%;
+  height: 80px;
+}
+.scenario1__next {
+  position: absolute;
+  top: 105px;
+  right: 730px;
+  font-size: 30px;
+  color: white;
 }
 
 .arrow1 {
-  position: absolute;
-  bottom: 0;
-  right: 0;
   width: 75px;
   height: 75px;
+  margin-left: 100px;
 
   &:hover {
     cursor: pointer;
