--- a/src/scss/global/blocs/scenario2.scss
+++ b/src/scss/global/blocs/scenario2.scss
@@ -9,21 +9,34 @@
   align-items: center;
   text-align: center;
   color: white;
+  font-size: 30px;
+  height: 80px;
+}
+
+.scenario2__text-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  bottom: 0;
+  width: 100vw;
   background-color: #453737;
   opacity: 0.75;
+  font-family: "SuperMario256";
+}
+.scenario2__next {
   position: absolute;
+  top: 105px;
+  right: 730px;
   font-size: 30px;
-  bottom: 0;
-  height: 100px;
-  width: 100%;
+  color: white;
 }
 
 .arrow2 {
-  position: absolute;
-  bottom: 0;
-  right: 0;
   width: 75px;
   height: 75px;
+  margin-left: 100px;
+
   &:hover {
     cursor: pointer;
   }
