--- a/src/scss/global/blocs/tutocommande.scss
+++ b/src/scss/global/blocs/tutocommande.scss
@@ -1,11 +1,12 @@
 .imgTuto {
-  margin-top: 20px;
+  margin-top: 100px;
+  // margin-left: 80px;
 }
 
 .tutoImg {
   display: flex;
   justify-content: center;
-  margin: none;
+  margin-right: 60px;
   padding: none;
 }
 
@@ -16,10 +17,11 @@
   align-items: center;
   text-align: center;
   color: white;
+
   .but {
     font-family: "SuperMario256";
     font-size: 45px;
-    // margin-top: -50px;
+    margin-top: 50px;
   }
 }
 
@@ -30,25 +32,33 @@
 // }
 
 .explication {
+  margin-top: 30px;
   font-family: "SuperMario256";
   font-size: 30px;
   width: 60%;
 }
 
 .contentTuto {
-  display: flex;
-  height: 750px;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  //display: flex;
+  //height: 750px;
+  //width: 1366px;
+  //justify-content: center;
+  //flex-direction: column;
+  //align-items: center;
   background-color: rgba(167, 167, 167, 0.616);
-  color: white;
+  // width: 1366px;
+  height: 2500px;
+  // margin-left: 50px;
+  //color: white;
 }
 
 .arrow {
-  display: flex;
   width: 100px;
   height: 100px;
+  position: absolute;
+  margin-top: 10px;
+  margin-left: 400px;
+  left: 250px;
 
   &:hover {
     cursor: pointer;
